# delock

./: .gitignore  CMakeLists.txt  README.md
include/: delock.h
src/: CMakeLists.txt  delock.S  delock.c  delock_aarch64.S  delock_bench.c  delock_test.c  delock_x86_64.S  wrapper.c
